social config, added social links to header

--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -6,12 +6,12 @@
 		<nav role="navigation" id="site-nav" class="nav">
 		    <ul>
 		        {% for link in site.data.navigation %}
-				    {% if link.url contains 'http' %}
+				    {% if link.url contains 'http' or link.url contains 'mailto' %}
 				        {% assign domain = '' %}
 				        {% else %}
 				        {% assign domain = site.url %}
 				    {% endif %}
-				    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank"{% endif %}>{{ link.title }}</a></li>
+				    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' or link.url contains 'mailto' %}target="_blank"{% endif %}>{{ link.title }}</a></li>
 				{% endfor %}
 		    </ul>
 		</nav>
