--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -13,6 +13,7 @@
 				    {% endif %}
 				    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' or link.url contains 'mailto' %}target="_blank"{% endif %}>{{ link.title }}</a></li>
 				{% endfor %}
+                <li><a href="/sites" >Sites</a></li>
 		    </ul>
 		</nav>
 	</div><!-- /.top-navigation -->
