--- a/styles/main.css
+++ b/styles/main.css
@@ -91,8 +91,11 @@ div , footer {
 /*Hero section*/
 
 .section {
-	background-color: #EEF0F7;
 	padding: 1px 0;
+}
+
+.section-shaded {
+	background-color: #EEF0F7;
 }
 
 .container {
@@ -179,7 +182,6 @@ h1.name {
 	vertical-align: top;
 	display: inline-block;
 	width: 49.7%;
-	height: 50px;
 }
 
 .section-title {
@@ -346,7 +348,7 @@ h1.name {
     border: none;
     height: 2px;
     color: #EEF0F7;
-    background-color: #EEF0F7;
+    background-color: #fff;
     width: 100%;
 }
 .timeline-element .point {
@@ -354,7 +356,7 @@ h1.name {
 	display: block;
 	width: 8px;
 	height: 8px;
-	border: 4px solid #fff;
+	border: 4px solid #EEF0F7;
 	border-radius: 10px;
 	background: #4A90E2;
 	margin-top: -19px;
